tests/ui/imports/no-std-inject.rs
#![no_std]

extern crate core; //~ ERROR: the name `core` is defined multiple times
extern crate std;

fn main() {}
